@@ -1,4 +1,8 @@
-$Id: ChangeLog,v 1.11 2007-02-17 10:32:31 karl Exp $
+$Id: ChangeLog,v 1.12 2007-02-18 06:29:48 karl Exp $
+
+2007-02-18 karl
+    * Add getfsstat that will return filesystem statistics for all mounted
+      filesystems.
 
 2007-01-17 karl
     * Add cputime proc to calculate the CPU time used by running something,
